--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,10 @@
     <string name="settings">Settings</string>
     <string name="tutorial">Tutorial</string>
     <string name="emergency">Emergency</string>
+    <string name="information">INFORMATION</string>
+    <string name="knowledge">Knowledge:</string>
+    <string name="friendliness">Friendliness:</string>
+    <string name="punctuality">Punctuality:</string>
+    <string name="helpfulness">Helpfulness:</string>
+    <string name="overall">Overall:</string>
 </resources>
