--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="name">Name</string>
     <string name="speciality">Speciality</string>
     <string name="location">Location</string>
+    <string name="search">Search:</string>
 </resources>
