--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
     <string name="confirm">CONFIRM</string>
     <string name="payment">Your last payment was 12/11/15</string>
     <string name="survey">SURVEY</string>
+    <string name="news_header">NEWS</string>
+    <string name="reminder_header">REMINDER</string>
 </resources>
